remove footers and fix wrap

--- a/1-prosjekt/css/style.css
+++ b/1-prosjekt/css/style.css
@@ -10,9 +10,14 @@ html {
     width: 100%;
 }
 
+svg,
+canvas {
+    display: block;
+    margin: auto;
+}
+
 #header-container {
     background: #00c3ff;
-    ;
 }
 
 .container {
@@ -21,42 +26,35 @@ html {
     grid-template-rows: 0.25fr 1fr 0.25fr 1000px;
     height: 100vh;
     width: 100%;
-    min-width: 500px;
+    grid-template-areas: "header header""painting-svg painting-canvas""documentation-button documentation-button""documentation documentation";
+    padding-bottom: 100px;
+    position: relative;
+    /* Footer height */
 }
 
 .item-1 {
-    grid-column: 1 / span 2;
-    grid-row: 1 / 1;
     display: flex;
+    grid-area: header;
     justify-content: center;
 }
 
 .item-2 {
-    grid-column: 1 / 1;
-    grid-row: 2 / 2;
+    grid-area: painting-svg;
+    display: flex;
 }
 
 .item-3 {
-    grid-column: 2 / 2;
-    grid-row: 2 / 2;
+    grid-area: painting-canvas;
 }
 
 .item-4 {
-    grid-column: 1 / span 2;
-    grid-row: 3 / 3;
+    grid-area: documentation-button;
     display: flex;
-    align-items: flex-end;
+    justify-content: center;
 }
 
 .item-5 {
-    grid-column: 1 / span 2;
-    grid-row: 4 / 4;
-}
-
-.flex-box {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    grid-area: documentation;
 }
 
 #documentation {
@@ -70,10 +68,14 @@ html {
     justify-content: center;
 }
 
-h3 {
-    text-align: center;
+.vertical-flex-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
+h3,
+h1,
 p {
     text-align: center;
 }
@@ -92,37 +94,22 @@ button {
     border-radius: 12px;
 }
 
-.arrow {
-    border: solid black;
-    border-width: 0 3px 3px 0;
-    display: inline-block;
-    padding: 3px;
-}
-
-.down {
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
-}
-
-.up {
-    transform: rotate(-135deg);
-    -webkit-transform: rotate(-135deg);
-}
-
-
-/* The sticky class is added to the header with JS when it reaches its scroll position */
-
 .sticky {
     position: fixed;
     top: 0;
 }
 
-.footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #00c3ff;
-    color: white;
-    text-align: center;
+@media only screen and (max-width: 600px) {
+    .container {
+        grid-template-columns: 100%;
+        grid-template-rows: 0.25fr 1fr 1fr 0.25fr 1000px;
+        grid-template-areas: "header""painting-svg""painting-canvas""documentation-button""documentation";
+    }
+}
+
+@media only screen and (max-width: 253px) {
+    button {
+        min-width: none;
+        height: none;
+    }
 }
